--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     padding-block: 2em;
     cursor: pointer;
-    width: 90%;
+    width: 95%;
     margin: auto;
     color: var(--text-color);
 }
@@ -18,6 +18,10 @@
     width: 100%;
     transition: 1s;
 }
+
+.nav-text{
+    font-size: 1.6rem;
+}
 .icon{
     display: flex;
     align-items: center;
@@ -27,7 +31,7 @@
 .dark-or-light-mode{
     font-size: 1.2rem;
     font-weight: 600;
-    
+
 }
 
 
@@ -36,7 +40,7 @@ background: transparent;
 display: grid;
 place-items: center;
 border: 0;
-} 
+}
 
 .btn>svg {
     width: 20px;
@@ -46,7 +50,11 @@ border: 0;
 
 @media (min-width: 40em){
     .container{
-        padding-block: 1em;
-        max-width: 1260px;
+        padding: 1em 0px;
+        width: 90%;
         }
+
+        .nav-text{
+    font-size: 2rem;
+}
 }
