--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -22,6 +22,10 @@
 .nav-text{
     font-size: 1.6rem;
 }
+
+.nav-text a{
+color: var(--text-color);
+}
 .icon{
     display: flex;
     align-items: center;
