--- a/src/Styles/Country.css
+++ b/src/Styles/Country.css
@@ -6,7 +6,7 @@ box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
 border-radius: 0.5rem 0.5rem 0 0;
 width: 100%;
 height: 160px;
-
+aspect-ratio: 1;
 }
 
 
