--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -32,6 +32,7 @@ box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
     background: transparent;
     border: none;
 color: var(--input-text);
+width: 100%;
 }
 
 .search > input::placeholder{
